# snappy-nano

./: .clangd  .gitignore  .gitmodules  Dockerfile  Dockerfile.jetson  KALMAN_README.md  KALMAN_VARIABLES.md  KNOWN_ISSUES.md  MOVEMENT.md  README.md  compare_replay.py  compile_commands.json  depth_1783959257588638556.csv  depth_1783959822089283366.csv  depth_1783962764572012989.csv  depth_1783966159407821853.csv  depth_1783966508477623852.csv  depth_1784017008941449979.csv  depth_1784017790078562336.csv  depth_1784023529571053987.csv  depth_1784023768584904588.csv  depth_1784026273015128297.csv  depth_1784028383690566708.csv  depth_1784029419333667378.csv  depth_1784032224331897231.csv  depth_1784034230298375625.csv  depth_1784049457898527743.csv  depth_1784049700467953574.csv  depth_1784060543753906964.csv  depth_1784060763195750958.csv  depth_1784061677387349386.csv  depth_1784063251451350259.csv  depth_1784063685697309137.csv  depth_1784064380176511493.csv  depth_1784065758372436544.csv  depth_1784066009491363602.csv  depth_1784066230537048038.csv  depth_1784075556714769707.csv  depth_1784075677867988482.csv  depth_1784076027633101677.csv  (+221 more)
.devcontainer/: devcontainer.json
.github/workflows/: c-cpp.yml
docs/: THRUSTER_MAP.md  jetson-headless-mode.md
install/: local_setup.sh  setup.sh
log/: latest_build
scripts/: MS5837_Example.ino  build_full_assembly_mesh.py  calibrate_depth.py  calibrate_imu.py  find_added_mass.py  generate_watertight_mesh.py  init_motors.py  jetson_gui.sh  jetson_headless.sh  verify_jetson_container.sh
scripts/esp32_heartbeat.ino/: esp32_heartbeat.ino.ino
src/: imu1.csv  imu1_stationary.csv  imu2.csv
src/Xsens_MTi_ROS_Driver_and_Ntrip_Client/: README.md  README.zh.md
src/Xsens_MTi_ROS_Driver_and_Ntrip_Client/src/xsens_mti_ros2_driver/: CMakeLists.txt
src/Xsens_MTi_ROS_Driver_and_Ntrip_Client/src/xsens_mti_ros2_driver/param/: xsens_mti_node.yaml
src/install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
src/log/: latest_build
src/snappy_computer_vision/: CMakeLists.txt  package.xml
src/snappy_computer_vision/config/: d405_underwater.json
src/snappy_computer_vision/launch/: snappy_computer_vision.launch.py
src/snappy_computer_vision/msg/: BoundingBox2D.msg  ObjectDetection.msg  Quadrant.msg
src/snappy_computer_vision/src/: bottom_camera_vision.cpp  displayFeed.cpp  front_camera_vision.cpp  image_capture.cpp  preprocess_cuda.h
src/snappy_computer_vision/src/include/: detection_classes.hpp
src/snappy_cpp/: CMakeLists.txt  README.md  package.xml
src/snappy_cpp/bt_trees/: mission.xml  prequal.xml
src/snappy_cpp/computerVision/: camera_test.cpp
src/snappy_cpp/config/: controller_params.yaml  d405_underwater.json  d455_underwater.json  state_estimator_params.yaml  tasks_example.yaml
src/snappy_cpp/include/snappy_cpp/: motorboard.h  pid.h  simulation.h  thruster_allocator.h
src/snappy_cpp/launch/: motor_control.launch.py  simulation.launch.py  snappy.launch.py  snappy_realsense.launch.py  snappy_sensor_test.launch.py
src/snappy_cpp/missions/: README.md  pool_test.yaml  semis.yaml  testing1.yaml
src/snappy_cpp/msg/: ControllerStatus.msg  DetectionArray.msg  ObjectDetection.msg  Task.msg  ThrusterCommand.msg
src/snappy_cpp/scripts/: fake_sensors.py  sim_shim.py
src/snappy_cpp/src/: behavior_tree.cpp  bottom_cam.cpp  bottom_camera_vision.cpp  camera_inference.cpp  computer_vision.cpp  computer_vision_cpu.cpp  controller.cpp  controller.hpp  counter_publisher.cpp  cuda.cpp  displayFeed.cpp  front_cam.cpp  front_camera_vision.cpp  image_capture.cpp  kalman.cpp  kalman.h  motorTest.cpp  motorboard.cpp  pid.cpp  planner.cpp  preprocess_cuda.cu  pressure_sensor.cpp  sensorTest.cpp  serial.cpp  show_window.cpp  sim_controller.cpp  solenoid_channel.cpp  state_estimator.cpp  telemetry.cpp  test.cpp  test_kalman.cpp  thruster_allocator.cpp
src/snappy_cpp/src/bt/: actuator_nodes.hpp  bt_context.hpp  bt_nodes.hpp  condition_nodes.hpp  go_to_depth.cpp  mission_tree.hpp  motion_nodes.hpp  simple_nodes.cpp  timed_surge.cpp  turned_heading.cpp  vision_nodes.hpp
src/snappy_cpp/src/include/Inc/: kalman.h  motorboard.h  pid.h  serial.h  simmotorboard.h  thruster_allocator.h
src/snappy_cpp/src/include/src/: kalman.cpp  motorboard.cpp  pid.cpp  serial.cpp  simulation.cpp
src/snappy_cpp/tests/: test_kalman.cpp  test_serial.cpp
src/snappy_cpp/worlds/: Dropper Bin.dae  Torpedo Target.dae  gate.dae  imu2.csv  kraken.sdf  octagon.dae  path_marker.dae  slalom_red.dae  slalom_white.dae  t200_prop.dae  table.dae
src/snappy_interfaces/: CMakeLists.txt  package.xml
state_estimator_outputs/1783280617402906537/: depth_1783280617402906537.csv  dvl_1783280617402906537.csv  imu2_1783280617402906537.csv  kalman_1783280617402906537.csv  kalman_replay_1783280617402906537.csv
state_estimator_outputs/1783959257588638556/: dvl_1783959257588638556.csv  imu2_1783959257588638556.csv  kalman_1783959257588638556.csv
state_estimator_outputs/1783959822089283366/: dvl_1783959822089283366.csv  imu2_1783959822089283366.csv  kalman_1783959822089283366.csv
state_estimator_outputs/1783960103260595789/: depth_1783960103260595789.csv  imu2_1783960103260595789.csv  kalman_1783960103260595789.csv
state_estimator_outputs/1783960235298204929/: depth_1783960235298204929.csv  dvl_1783960235298204929.csv  imu2_1783960235298204929.csv  kalman_1783960235298204929.csv
state_estimator_outputs/1783962656297605132/: depth_1783962656297605132.csv  dvl_1783962656297605132.csv  imu2_1783962656297605132.csv
state_estimator_outputs/1783962764572012989/: dvl_1783962764572012989.csv  imu2_1783962764572012989.csv  kalman_1783962764572012989.csv
state_estimator_outputs/1783963005810332301/: depth_1783963005810332301.csv  imu2_1783963005810332301.csv  kalman_1783963005810332301.csv
state_estimator_outputs/1783963181498231280/: depth_1783963181498231280.csv  kalman_1783963181498231280.csv
state_estimator_outputs/1783963248560099142/: depth_1783963248560099142.csv  dvl_1783963248560099142.csv  imu2_1783963248560099142.csv  kalman_1783963248560099142.csv
(+216 files in other folders)
